[gd_scene load_steps=7 format=3 uid="uid://bqpjewnrc3uj0"]

[ext_resource type="Script" path="res://scenes/animal/animal.gd" id="1_2m05k"]
[ext_resource type="Texture2D" uid="uid://cdhtds0s34eb2" path="res://assets/player/parrot.png" id="1_lbprt"]
[ext_resource type="Texture2D" uid="uid://8s5gl6mvlc6s" path="res://assets/items/arrow.png" id="3_luq3j"]
[ext_resource type="AudioStream" uid="uid://b42pkuk0h2bms" path="res://assets/audio/stretch2.ogg" id="4_at2yw"]
[ext_resource type="AudioStream" uid="uid://dh1o2i3elfhcc" path="res://assets/audio/catapult.ogg" id="5_lky4u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onsm5"]
radius = 19.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
freeze = true
script = ExtResource("1_2m05k")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_lbprt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_onsm5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.76837e-07, -4.76837e-07)
scale = Vector2(1.9, 1.9)

[node name="Label" type="Label" parent="."]
offset_left = 23.0
offset_top = -18.0
offset_right = 78.0
offset_bottom = 5.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "DEBUG
"

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_luq3j")
offset = Vector2(150, 2.08165e-12)

[node name="StrechSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_at2yw")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lky4u")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
